syntax = "proto3";

import "google/protobuf/timestamp.proto";

// To generate run this: `cd go/scraping && protoc --go_out=$(pwd) protobuf/common.proto`
option go_package = "protobuf/common";

message TickerMention {
    string symbol = 1;
    string parent_source = 2;
    string parent_id = 3;
    google.protobuf.Timestamp timestamp = 4;
    uint32 symbol_counts = 5;
    uint32 short_name_counts = 6;
    uint32 word_count = 7;
    uint32 question_mark_count = 8;
}
