syntax = "proto3";

import "google/protobuf/timestamp.proto";

// To generate run this: ``
option go_package = "protobuf/reddit";

message RedditSubmission {
    string submission_id = 1;
    string subreddit = 2;
    optional string title = 3;
    google.protobuf.Timestamp created_at = 4;
    optional string body = 6;
    string author = 7;
    string author_id = 8;
    optional bool is_self = 9;
    optional string permalink = 10;
    optional string url = 11;
}

message RedditComment {
    string comment_id = 1;
    string submission_id = 2;
    string subreddit = 3;
    string author = 4;
    string author_id = 5;
    google.protobuf.Timestamp created_at = 6;
    optional string body = 7;
    optional string permalink = 8;
}